src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account/Customer who has made this Payment</description>
        <inlineHelpText>The Account/Customer who has made this Payment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Period</label>
        <referenceTo>Accounting_Period__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <description>The Amount that has already been Allocated.</description>
        <inlineHelpText>The Amount that has already been Allocated.</inlineHelpText>
        <label>Allocated Amount</label>
        <summarizedField>Payment_Allocation__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Allocation__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Allocation__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Charges__c</fullName>
        <label>Bank Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Reference__c</fullName>
        <label>Bank Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Allocation_Rule__c</fullName>
        <formula>TEXT( Account__r.Cash_Allocation_Rule__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Allocation Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Import__c</fullName>
        <label>Data Import</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015-02-20 Legacy D/R Offset --&gt; CreditNotes</fullName>
                </value>
                <value>
                    <fullName>2015-02-20 Legacy D/R Offset -&gt; Paid Invoices</fullName>
                </value>
                <value>
                    <fullName>2015-02-20 Legacy D/R Offset -&gt; Eight -Ve Invoices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Applied__c</fullName>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is selected on creation of Payment, allocation is done automatically</description>
        <inlineHelpText>If this is selected on creation of Payment, allocation is done automatically</inlineHelpText>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Invoice__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Payment Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Days_From_Payment_Date__c</fullName>
        <formula>TODAY() - Payment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Days From Payment Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally choose the Contact who made this Payment. This Contact must belong to the same Account.</description>
        <inlineHelpText>Optionally choose the Contact who made this Payment. This Contact must belong to the same Account.</inlineHelpText>
        <label>Paid by</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can choose a contact that belongs to the same account as the payment.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Choose the contact who made this payment. This contact must belong to the same account as the payment.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Created_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Created From</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments (Payment Created From)</relationshipLabel>
        <relationshipName>Payment_Created_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The Date on which this Payment was made.</description>
        <inlineHelpText>The Date on which this Payment was made.</inlineHelpText>
        <label>Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Description__c</fullName>
        <label>Payment Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Bad Debt Write off</fullName>
                </value>
                <value>
                    <fullName>Bank Fee</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>BMS Receipt</fullName>
                </value>
                <value>
                    <fullName>BMS Sales Payment</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Commission Deducted</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>FX Gain/Loss</fullName>
                </value>
                <value>
                    <fullName>Legacy D/R Offset</fullName>
                </value>
                <value>
                    <fullName>Withholding Tax</fullName>
                </value>
                <value>
                    <fullName>Int Co Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <label>Refunded Amount</label>
        <summarizedField>Refund_Line__c.Refund_Amount__c</summarizedField>
        <summaryForeignKey>Refund_Line__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                    <color>#F3D904</color>
                    <label>Initiated</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#FF0000</color>
                    <label>Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnAllocated_Amount_0_30_Days__c</fullName>
        <description>UnAllocated Amount from the Invoice Date(0-30 days)</description>
        <formula>IF(No_Of_Days_From_Payment_Date__c &lt;= 30, Unallocated_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UnAllocated Amount(0-30 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnAllocated_Amount_121_180_Days__c</fullName>
        <description>UnAllocated Amount from the Invoice Date(121-180 days)</description>
        <formula>IF(No_Of_Days_From_Payment_Date__c &gt;= 121 &amp;&amp; No_Of_Days_From_Payment_Date__c &lt;= 180, Unallocated_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UnAllocated Amount from the Invoice Date(121-180 days)</inlineHelpText>
        <label>UnAllocated Amount(121-180 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnAllocated_Amount_180_Days__c</fullName>
        <description>UnAllocated Amount from the Invoice Date(&gt; 180 days)</description>
        <formula>IF(No_Of_Days_From_Payment_Date__c &gt; 180, Unallocated_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UnAllocated Amount from the Invoice Date(&gt; 180 days)</inlineHelpText>
        <label>UnAllocated Amount(&gt; 180 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnAllocated_Amount_31_60_Days__c</fullName>
        <description>UnAllocated Amount from the Invoice Date(31-60 days)</description>
        <formula>IF(No_Of_Days_From_Payment_Date__c &gt;= 31 &amp;&amp; No_Of_Days_From_Payment_Date__c &lt;= 60, Unallocated_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UnAllocated Amount from the Invoice Date(31-60 days)</inlineHelpText>
        <label>UnAllocated Amount(31-60 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unallocated_Amount__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &apos;Cancelled&apos;), 0, Amount__c - Allocated_Amount__c - Refunded_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>